# qemu

./: MAINTAINERS  YV4_README.rst  meson.build  meson_options.txt  qemu-options.hx
hw/acpi/: ich9.c  ich9_tco.c
hw/arm/: Kconfig  aspeed.c  aspeed_ast2600_fby4.c  aspeed_eeprom.c  aspeed_eeprom.h  fby4.c  meson.build
hw/core/: qdev-properties-system.c
hw/i2c/: Kconfig  chardev_i2c.c  mctp.c  meson.build  trace-events
hw/i386/: pc_sysfw.c
hw/isa/: Kconfig  lpc_ich9.c  meson.build
hw/misc/: i2c-echo.c  trace-events
hw/nvme/: meson.build  nmi-i2c.c  trace-events
hw/sensor/: Kconfig  ads7138.c  bme280.c  ir38263.c  lm5066i.c  max5978.c  max6639.c  max8952.c  meson.build
hw/usb/: Kconfig  dev-video.c  meson.build  trace-events  video.h
hw/vfio/: igd.c
include/hw/: qdev-properties-system.h  usb.h
include/hw/i2c/: chardev_i2c.h
include/hw/sensor/: ads7138.h  bme280.h  max5978.h  max6639.h  max8952.h
include/hw/southbridge/: ich9.h  ich9_spi.h
linux-headers/linux/: vfio.h
qapi/: camera.json  meson.build  qapi-schema.json
scripts/: meson-buildoptions.sh
system/: vl.c
video/: gstreamer-common.h  gstreamer.c  libcamera.c  meson.build  v4l2.c  video.c  video.h
