system_ss.add(when: 'CONFIG_TMP105', if_true: files('tmp105.c'))
system_ss.add(when: 'CONFIG_TMP421', if_true: files('tmp421.c'))
system_ss.add(when: 'CONFIG_DPS310', if_true: files('dps310.c'))
system_ss.add(when: 'CONFIG_EMC141X', if_true: files('emc141x.c'))
system_ss.add(when: 'CONFIG_ADM1272', if_true: files('adm1272.c'))
system_ss.add(when: 'CONFIG_MAX34451', if_true: files('max34451.c'))
system_ss.add(when: 'CONFIG_LSM303DLHC_MAG', if_true: files('lsm303dlhc_mag.c'))
system_ss.add(when: 'CONFIG_ISL_PMBUS_VR', if_true: files('isl_pmbus_vr.c'))
system_ss.add(when: 'CONFIG_MAX31785', if_true: files('max31785.c'))
system_ss.add(when: 'CONFIG_BME280', if_true: files('bme280.c'))
system_ss.add(when: 'CONFIG_MAX8952', if_true: files('max8952.c'))
system_ss.add(when: 'CONFIG_MAX6639', if_true: files('max6639.c'))
system_ss.add(when: 'CONFIG_MAX5978', if_true: files('max5978.c'))
system_ss.add(when: 'CONFIG_IR38263', if_true: files('ir38263.c'))
